--- a/Proyecto_Parque_Atracciones.ipynb
+++ b/Proyecto_Parque_Atracciones.ipynb
@@ -2781,6 +2781,432 @@
    "source": [
     "top_poblacion_salario"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "abf1a36b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo 'parques_atracciones_europa.csv' creado correctamente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Datos de los parques de atracciones\n",
+    "data = {\n",
+    "    \"Parque Temático\": [\n",
+    "        \"Disneyland Park Paris\",\n",
+    "        \"Europa-Park\",\n",
+    "        \"Walt Disney Studios Park\",\n",
+    "        \"De Efteling\",\n",
+    "        \"Tivoli Gardens\",\n",
+    "        \"PortAventura World\",\n",
+    "        \"Gardaland\",\n",
+    "        \"Parc Astérix\",\n",
+    "        \"Puy du Fou\",\n",
+    "        \"Legoland Windsor\",\n",
+    "        \"Alton Towers\",\n",
+    "        \"Legoland Billund\",\n",
+    "        \"Liseberg\"\n",
+    "    ],\n",
+    "    \"País\": [\n",
+    "        \"Francia\",\n",
+    "        \"Alemania\",\n",
+    "        \"Francia\",\n",
+    "        \"Países Bajos\",\n",
+    "        \"Dinamarca\",\n",
+    "        \"España\",\n",
+    "        \"Italia\",\n",
+    "        \"Francia\",\n",
+    "        \"Francia\",\n",
+    "        \"Reino Unido\",\n",
+    "        \"Reino Unido\",\n",
+    "        \"Dinamarca\",\n",
+    "        \"Suecia\"\n",
+    "    ],\n",
+    "    \"Visitantes (millones)\": [\n",
+    "        10.4,\n",
+    "        6.0,\n",
+    "        5.7,\n",
+    "        5.56,\n",
+    "        4.03,\n",
+    "        3.98,\n",
+    "        3.07,\n",
+    "        2.81,\n",
+    "        2.5,\n",
+    "        2.42,\n",
+    "        2.35,\n",
+    "        2.35,\n",
+    "        2.3\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Crear DataFrame\n",
+    "parques_europa= pd.DataFrame(data)\n",
+    "\n",
+    "# Guardar en archivo CSV\n",
+    "parques_europa.to_csv(\"parques_atracciones_europa.csv\", index=False)\n",
+    "\n",
+    "print(\"Archivo 'parques_atracciones_europa.csv' creado correctamente.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "98ea0915",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Parque Temático</th>\n",
+       "      <th>País</th>\n",
+       "      <th>Visitantes (millones)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Disneyland Park Paris</td>\n",
+       "      <td>Francia</td>\n",
+       "      <td>10.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Europa-Park</td>\n",
+       "      <td>Alemania</td>\n",
+       "      <td>6.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Walt Disney Studios Park</td>\n",
+       "      <td>Francia</td>\n",
+       "      <td>5.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>De Efteling</td>\n",
+       "      <td>Países Bajos</td>\n",
+       "      <td>5.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Tivoli Gardens</td>\n",
+       "      <td>Dinamarca</td>\n",
+       "      <td>4.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PortAventura World</td>\n",
+       "      <td>España</td>\n",
+       "      <td>3.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Gardaland</td>\n",
+       "      <td>Italia</td>\n",
+       "      <td>3.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Parc Astérix</td>\n",
+       "      <td>Francia</td>\n",
+       "      <td>2.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Puy du Fou</td>\n",
+       "      <td>Francia</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Legoland Windsor</td>\n",
+       "      <td>Reino Unido</td>\n",
+       "      <td>2.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Alton Towers</td>\n",
+       "      <td>Reino Unido</td>\n",
+       "      <td>2.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Legoland Billund</td>\n",
+       "      <td>Dinamarca</td>\n",
+       "      <td>2.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Liseberg</td>\n",
+       "      <td>Suecia</td>\n",
+       "      <td>2.30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Parque Temático          País  Visitantes (millones)\n",
+       "0      Disneyland Park Paris       Francia                  10.40\n",
+       "1                Europa-Park      Alemania                   6.00\n",
+       "2   Walt Disney Studios Park       Francia                   5.70\n",
+       "3                De Efteling  Países Bajos                   5.56\n",
+       "4             Tivoli Gardens     Dinamarca                   4.03\n",
+       "5         PortAventura World        España                   3.98\n",
+       "6                  Gardaland        Italia                   3.07\n",
+       "7               Parc Astérix       Francia                   2.81\n",
+       "8                 Puy du Fou       Francia                   2.50\n",
+       "9           Legoland Windsor   Reino Unido                   2.42\n",
+       "10              Alton Towers   Reino Unido                   2.35\n",
+       "11          Legoland Billund     Dinamarca                   2.35\n",
+       "12                  Liseberg        Suecia                   2.30"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parques_europa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "8dcb5e7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parques_completo = pd.merge(top_poblacion_salario, parques_europa, on=\"País\", how=\"outer\")\n",
+    "parques_completo = parques_completo.groupby(\"País\").agg({\n",
+    "    \"Parque Temático\": \"first\",\n",
+    "    \"Visitantes (millones)\": \"first\",\n",
+    "    \"Salario mínimo\": \"first\",\n",
+    "    \"Población\": \"first\"\n",
+    "}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "42b511fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>País</th>\n",
+       "      <th>Parque Temático</th>\n",
+       "      <th>Visitantes (millones)</th>\n",
+       "      <th>Salario mínimo</th>\n",
+       "      <th>Población</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alemania</td>\n",
+       "      <td>Europa-Park</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>2222.00</td>\n",
+       "      <td>83.577.140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bélgica</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2029.88</td>\n",
+       "      <td>11.900.123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dinamarca</td>\n",
+       "      <td>Tivoli Gardens</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Eslovenia</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1253.36</td>\n",
+       "      <td>2.130.850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>España</td>\n",
+       "      <td>PortAventura World</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>1323.00</td>\n",
+       "      <td>49.315.949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Francia</td>\n",
+       "      <td>Disneyland Park Paris</td>\n",
+       "      <td>10.40</td>\n",
+       "      <td>1801.80</td>\n",
+       "      <td>68.635.943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Irlanda</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2281.50</td>\n",
+       "      <td>5.439.898</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Italia</td>\n",
+       "      <td>Gardaland</td>\n",
+       "      <td>3.07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Lituania</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1038.00</td>\n",
+       "      <td>2.890.664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Luxemburgo</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2637.77</td>\n",
+       "      <td>681.973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Países Bajos</td>\n",
+       "      <td>De Efteling</td>\n",
+       "      <td>5.56</td>\n",
+       "      <td>2437.00</td>\n",
+       "      <td>18.044.027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Polonia</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1085.57</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Reino Unido</td>\n",
+       "      <td>Legoland Windsor</td>\n",
+       "      <td>2.42</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Suecia</td>\n",
+       "      <td>Liseberg</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            País        Parque Temático  Visitantes (millones)  \\\n",
+       "0       Alemania            Europa-Park                   6.00   \n",
+       "1        Bélgica                   None                    NaN   \n",
+       "2      Dinamarca         Tivoli Gardens                   4.03   \n",
+       "3      Eslovenia                   None                    NaN   \n",
+       "4         España     PortAventura World                   3.98   \n",
+       "5        Francia  Disneyland Park Paris                  10.40   \n",
+       "6        Irlanda                   None                    NaN   \n",
+       "7         Italia              Gardaland                   3.07   \n",
+       "8       Lituania                   None                    NaN   \n",
+       "9     Luxemburgo                   None                    NaN   \n",
+       "10  Países Bajos            De Efteling                   5.56   \n",
+       "11       Polonia                   None                    NaN   \n",
+       "12   Reino Unido       Legoland Windsor                   2.42   \n",
+       "13        Suecia               Liseberg                   2.30   \n",
+       "\n",
+       "    Salario mínimo   Población  \n",
+       "0          2222.00  83.577.140  \n",
+       "1          2029.88  11.900.123  \n",
+       "2              NaN        None  \n",
+       "3          1253.36   2.130.850  \n",
+       "4          1323.00  49.315.949  \n",
+       "5          1801.80  68.635.943  \n",
+       "6          2281.50   5.439.898  \n",
+       "7              NaN        None  \n",
+       "8          1038.00   2.890.664  \n",
+       "9          2637.77     681.973  \n",
+       "10         2437.00  18.044.027  \n",
+       "11         1085.57        None  \n",
+       "12             NaN        None  \n",
+       "13             NaN        None  "
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parques_completo"
+   ]
   }
  ],
  "metadata": {
